# e2e-testing

./: .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  base.env  example.env  pyproject.toml  pytest.ini  sonar-project.properties
.github/actions/run-tests/: action.yaml
.github/workflows/: ci.yaml  e2e.yml  sonar.yaml
tests/: conftest.py  helper.py  hub_abi.txt  test_transfer.py
